Fix heading spacing in elements with 'space-y' classes

--- a/web/app/themes/torasenstore/resources/css/main.css
+++ b/web/app/themes/torasenstore/resources/css/main.css
@@ -40,6 +40,11 @@
 
 /******** Blocks *********/
 
+/* Typography */
+[class*="space-y"] :is(h1, h2, h3, h4, h5, h6) {
+    margin-bottom: 0;
+}
+
 /* Button */
 .wp-block-button > .wp-block-button__link {
     @apply transition duration-300 ease-in-out;
